[package]
name = "LeDron_James"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git"}
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
drone = { path = "src/drone" }

[workspace]
members = [
    "src/drone",

]